--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
 
       - name: Run Python script over SSH with verbose output
         run: |
-          sshpass -p "8SiOL5pB1yq81qN)()" ssh -v -o StrictHostKeyChecking=no imperfect-hour-bes@mnz.domcloud.co 'cd public_html/python && python -u py4.py'
+          sshpass -p "8SiOL5pB1yq81qN)()" ssh -o StrictHostKeyChecking=no imperfect-hour-bes@mnz.domcloud.co 'cd public_html/python && python -u py4.py'
